<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="331dp"
        android:layout_marginRight="331dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/song1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio_Click"
            android:text="@string/song_1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="165dp" />

        <RadioButton
            android:id="@+id/song2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio_Click"
            android:text="@string/song_2"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="232dp" />

        <RadioButton
            android:id="@+id/song3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radio_Click"
            android:text="@string/song_3"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="285dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="164dp"
        android:layout_height="49dp"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginBottom="502dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="275dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="121dp"
        android:onClick="button_click1"
        android:text="@string/Stop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="122dp"
        android:visibility="gone"
        android:onClick="button_click2"
        android:text="@string/Play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pause"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

</android.support.constraint.ConstraintLayout>